# nearai-mint-agent

./: .gitignore
agent/: agent.py  metadata.json  template.html
nft-contract/: Cargo.toml
nft-contract/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
