[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.93"
near-api = "0.2.1"
dotenvy = "0.15.7"
near-primitives = "0.26.0"
near-token = "0.3.0"
